prevent horizontal scrolling

--- a/styles/main.css
+++ b/styles/main.css
@@ -46,6 +46,7 @@ body {
   padding: 0;
   background: var(--primary);
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 ::selection {
   background-color: var(--accent);
